@@ -1799,7 +1799,7 @@ number of Git commits by running <code>rake version</code>.
 </tr>
 </table>
 <pre class='ruby code syntax'>
-  <span class="Type">VERSION</span> = <span class="Special">&quot;</span><span class="Constant">0.1.19</span><span class="Special">&quot;</span>
+  <span class="Type">VERSION</span> = <span class="Special">&quot;</span><span class="Constant">0.1.20</span><span class="Special">&quot;</span>
 
 end
 </pre>
@@ -3387,7 +3387,7 @@ when the test is done.
       file = <span class="Type">Tempfile</span>.open(path, directory)
       file.write(content)
       file.close(<span class="Constant">false</span>)
-      (<span class="Identifier">@tempfiles</span> ||= []) &lt;&lt; (path = file.path)
+      (<span class="Identifier">@tempfiles</span> ||= []) &lt;&lt; file
       <span class="Statement">return</span> path
     <span class="PreProc">end</span>
 
@@ -3410,9 +3410,9 @@ complex file tests that can’t use FakeFS.
 </table>
 <pre class='ruby code syntax'>
     <span class="PreProc">def</span> <span class="Identifier">create_tempdir</span>(directory = <span class="Special">&quot;</span><span class="Constant">.</span><span class="Special">&quot;</span>)
-      file = <span class="Type">Tempfile</span>.open(<span class="Special">&quot;</span><span class="Constant">dir</span><span class="Special">&quot;</span>, directory)
-      (<span class="Identifier">@tempfiles</span> ||= []) &lt;&lt; (path = file.path)
-      <span class="Type">File</span>.delete(path)
+      (file = <span class="Type">Tempfile</span>.open(<span class="Special">&quot;</span><span class="Constant">dir</span><span class="Special">&quot;</span>, directory)).close(<span class="Constant">true</span>)
+      (<span class="Identifier">@tempfiles</span> ||= []) &lt;&lt; file
+      <span class="Type">File</span>.delete(path = file.path)
       <span class="Type">Dir</span>.mkdir(path)
       <span class="Statement">return</span> path
     <span class="PreProc">end</span>
@@ -3458,7 +3458,8 @@ Automatically clean up the temporary files when the test is done.
         <span class="PreProc">def</span> <span class="Identifier">teardown</span>
           tempfile_original_teardown
           (<span class="Identifier">@tempfiles</span> || []).each <span class="Statement">do</span> |<span class="Identifier">tempfile</span>|
-            <span class="Type">FileUtils</span>.rm_rf(tempfile) <span class="Statement">if</span> <span class="Type">File</span>.exist?(tempfile)
+            path = tempfile.path
+            <span class="Type">FileUtils</span>.rm_rf(path) <span class="Statement">if</span> <span class="Type">File</span>.exist?(path)
           <span class="Statement">end</span>
         <span class="PreProc">end</span>
 
